positioning and z-index issue fixed

--- a/sequence-editor/css/app.css
+++ b/sequence-editor/css/app.css
@@ -85,6 +85,9 @@ svg text::selection { background: none; }
 .tool-container {
    width: 80px;
    height: 60px;
+}
+
+.ui-draggable {
    z-index: 10000;
 }
 
